force-app/zurich-base/main/default/objects/PlanComercial__c/PlanComercial__c.object-meta.xml
<CustomObject>
    <description>SDM: Utilizado para representar el plan de negocio realizado por los directores.</description>
    <label>Plan Comercial</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planes Comerciales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>