force-app/zurich-base/main/default/objects/PlanComercial__c/fields/AccumulateType__c.field-meta.xml
<CustomField>
    <fullName>AccumulateType__c</fullName>
    <description>SDM: tipo de acumulado con el que se quiere comparar dentro del objeto KPI</description>
    <label>Accumulate type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mensual</fullName>
                <label>Current month</label>
            </value>
            <value>
                <fullName>YTD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>