force-app/zurich-base/main/default/objects/PlanComercial__c/fields/Actual_KPI__c.field-meta.xml
<CustomField>
    <fullName>Actual_KPI__c</fullName>
    <description>SDM: el resultado de KPI calculado de forma automática para el plan de acción a través de todos los criterios establecidos en el mismo</description>
    <label>Actual KPI</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>