force-app/zurich-base/main/default/objects/PlanComercial__c/fields/AssignedTo__c.field-meta.xml
<CustomField>
    <fullName>AssignedTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SDM: usuario, de tipo RN o consultor, al que irá asociado el registro. Se utiliza de cara a que un Director pueda generar planes para los usuarios de los que es responsable.</description>
    <label>Assigned to</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>Solo se puede asignar planes comerciales a usuarios de SDM</errorMessage>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>SDM RN</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>SDM Director</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>PlanComercial</relationshipName>
    <type>Lookup</type>
</CustomField>