force-app/zurich-base/main/default/objects/PlanComercial__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SDM: permite cerrar manualmente el plan de acción, para cambiar el estado del plan, y dejar de generar notificaciones y tareas.</description>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>