force-app/zurich-base/main/default/objects/PlanComercial__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SDM: contacto al que se le quiere vincular este plan de acción</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Planes Comerciales</relationshipLabel>
    <relationshipName>PlanComercial</relationshipName>
    <type>Lookup</type>
</CustomField>