force-app/zurich-base/main/default/objects/PlanComercial__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>SDM: permite a los usuarios incluir información relevante sobre el plan generado</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>