force-app/zurich-base/main/default/objects/PlanComercial__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>SDM: fecha en la que finaliza el plan de acción (solo aplicable a tipo acumulado YTD)</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>