force-app/zurich-base/main/default/objects/PlanComercial__c/fields/FollowUp__c.field-meta.xml
<CustomField>
    <fullName>FollowUp__c</fullName>
    <description>SDM: información adicional de seguimiento que se hace al plan de acción</description>
    <label>Follow up</label>
    <type>TextArea</type>
</CustomField>