force-app/zurich-base/main/default/objects/PlanComercial__c/fields/Indicator__c.field-meta.xml
<CustomField>
    <fullName>Indicator__c</fullName>
    <description>SDM: indicador (campo) del KPI con el que se quiere comparar el objetivo</description>
    <label>Indicator</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PN</fullName>
            </value>
            <value>
                <fullName>PoliciesPN</fullName>
                <label>Pólizas PN</label>
            </value>
            <value>
                <fullName>PoliciesInForce</fullName>
                <label>Pólizas en vigor</label>
            </value>
            <value>
                <fullName>Portfolio</fullName>
                <label>Cartera</label>
            </value>
            <value>
                <fullName>APES</fullName>
            </value>
            <value>
                <fullName>Ratio_Retention</fullName>
                <label>% Retention Ratio</label>
            </value>
            <value>
                <fullName>Ratio_Claim</fullName>
                <label>% Sin Total</label>
            </value>
            <value>
                <fullName>Ratio_PNIncrease</fullName>
                <label>% Crec PN vs pa</label>
            </value>
            <value>
                <fullName>Ratio_PoliciesPNIncreas</fullName>
                <label>% Crec Pólizas PN vs pa</label>
            </value>
            <value>
                <fullName>Ratio_PoliciesInForceIncrease</fullName>
                <label>% Crec Pólizas vigor vs pa</label>
            </value>
            <value>
                <fullName>Ratio_PortIncrease</fullName>
                <label>% crecimiento cartera</label>
            </value>
            <value>
                <fullName>Totaldiscount</fullName>
                <label>% Dto. Total</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>