force-app/zurich-base/main/default/objects/PlanComercial__c/fields/Intermediary__c.field-meta.xml
<CustomField>
    <fullName>Intermediary__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>SDM: mediador sobre el que se quiere realizar la búsqueda de KPIs para el cálculo de las cifras realas para su comparación con el objetivo</description>
    <label>Intermediary</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>La cuenta debe ser un agente</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Agrupación Mediador, Intermediary</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Planes Comerciales</relationshipLabel>
    <relationshipName>PlanComercial</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>