force-app/zurich-base/main/default/objects/PlanComercial__c/fields/Intermediary_Description__c.field-meta.xml
<CustomField>
    <fullName>Intermediary_Description__c</fullName>
    <formula>Intermediary__r.IntermediaryDescription__c</formula>
    <label>Intermediary Description</label>
    <type>Text</type>
</CustomField>