force-app/zurich-base/main/default/objects/PlanComercial__c/fields/IsOwnedByHomeOffice__c.field-meta.xml
<CustomField>
    <fullName>IsOwnedByHomeOffice__c</fullName>
    <description>Devuelve true si el usuario propietario del registro es un Home Office</description>
    <formula>Owner:User.UserRole.DeveloperName = &apos;SDMHomeOffice&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Owned By Home Office</label>
    <type>Checkbox</type>
</CustomField>