force-app/zurich-base/main/default/objects/PlanComercial__c/fields/Notified__c.field-meta.xml
<CustomField>
    <fullName>Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SDM: indica si el RN ha sido notificado de la cumplimentación del plan de acción</description>
    <label>Notified</label>
    <type>Checkbox</type>
</CustomField>