force-app/zurich-base/main/default/objects/PlanComercial__c/fields/PAActualKPI__c.field-meta.xml
<CustomField>
    <fullName>PAActualKPI__c</fullName>
    <label>Actual KPI (PA)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>