force-app/zurich-base/main/default/objects/PlanComercial__c/fields/ParentPlan__c.field-meta.xml
<CustomField>
    <fullName>ParentPlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SDM: hace referencia a un plan anual padre</description>
    <label>Parent Plan</label>
    <referenceTo>PlanComercial__c</referenceTo>
    <relationshipLabel>Planes Comerciales</relationshipLabel>
    <relationshipName>ParentPlans</relationshipName>
    <type>Lookup</type>
</CustomField>