force-app/zurich-base/main/default/objects/PlanComercial__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>SDM: productos del que se quiere obtener la información de los KPIs</description>
    <label>Product</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Autos</fullName>
                <label>Cars</label>
            </value>
            <value>
                <fullName>Hogar</fullName>
                <label>Home</label>
            </value>
            <value>
                <fullName>Inmuebles</fullName>
                <label>Estate</label>
            </value>
            <value>
                <fullName>Accidentes</fullName>
                <label>Accidents</label>
            </value>
            <value>
                <fullName>Comercios</fullName>
                <label>Commerce</label>
            </value>
            <value>
                <fullName>Patrimoniales</fullName>
                <label>Patrimonial</label>
            </value>
            <value>
                <fullName>Resp. Civil</fullName>
                <label>Civil liability</label>
            </value>
            <value>
                <fullName>Vida riesgo individual</fullName>
                <label>Individual risk life</label>
            </value>
            <value>
                <fullName>Vida riesgo colectivo</fullName>
                <label>Collective risk life</label>
            </value>
            <value>
                <fullName>Todos</fullName>
                <label>All</label>
            </value>
            <value>
                <fullName>Resto</fullName>
            </value>
            <value>
                <fullName>Communitdades</fullName>
                <label>Communities</label>
            </value>
            <value>
                <fullName>Resto Particulares</fullName>
                <isActive>false</isActive>
                <label>Rest Individuals</label>
            </value>
            <value>
                <fullName>Resto PYMEs</fullName>
                <isActive>false</isActive>
                <label>Rest of SMEs</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>