force-app/zurich-base/main/default/objects/PlanComercial__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>SDM: segmento del que se quiere obtener la información de los KPIs</description>
    <label>Segment</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Individuals</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>SMEs</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Large companies</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Life risk</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>All products</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>