force-app/zurich-base/main/default/objects/PlanComercial__c/fields/SendNotifications__c.field-meta.xml
<CustomField>
    <fullName>SendNotifications__c</fullName>
    <description>SDM: se permite definir al usuario cúando quiere que se le mande notificación. Vacío para no mandar notificación</description>
    <label>Send notifications</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Indicator__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Above threshold</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Below threshold</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>