force-app/zurich-base/main/default/objects/PlanComercial__c/fields/SentNotifications__c.field-meta.xml
<CustomField>
    <fullName>SentNotifications__c</fullName>
    <description>SDM: se almacena información de qué notificaciones se han mandado para este plan de acción,</description>
    <label>Sent notifications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>KPI reached</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Week left</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Plan closed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>