force-app/zurich-base/main/default/objects/PlanComercial__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>SDM: fecha en la que comienza el plan de acción (solo aplicable a tipo acumulado YTD)</description>
    <label>Start date</label>
    <type>Date</type>
</CustomField>