force-app/zurich-base/main/default/objects/PlanComercial__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF 
(
  OR
  (
    Completed__c = true,  
    EndDate__c &lt;  TODAY() 
  ),
  &quot;Cerrado&quot;, 
  IF
  (
     StartDate__c &gt;  TODAY(),
     &quot;Nuevo&quot;,
     &quot;Pendiente&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>