force-app/zurich-base/main/default/objects/PlanComercial__c/fields/TargetKPI__c.field-meta.xml
<CustomField>
    <fullName>TargetKPI__c</fullName>
    <formula>CASE
(
 Indicator__c , 
 &quot;PN&quot;,  TargetKPICurrency__c, 
 &quot;PoliciesPN&quot;, TargetKPINumber__c,
 &quot;PoliciesInForce&quot;, TargetKPINumber__c,
 &quot;Portfolio&quot;,  TargetKPICurrency__c ,
 &quot;Ratio_PNIncrease&quot;,   TargetKPIPercent__c,
 &quot;Ratio_PoliciesPNIncreas&quot;,   TargetKPIPercent__c,
 &quot;Ratio_PoliciesInForceIncrease&quot;,   TargetKPIPercent__c,
 &quot;Ratio_PortIncrease&quot;,   TargetKPIPercent__c,
 &quot;Ratio_Claim&quot;,   TargetKPIPercent__c * 100,
 &quot;Ratio_Retention&quot;,   TargetKPIPercent__c * 100,
 &quot;Totaldiscount&quot;,   TargetKPIPercent__c,
 &quot;APES&quot;, TargetKPICurrency__c,
	0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target KPI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>