force-app/zurich-base/main/default/objects/PlanComercial__c/fields/TargetKPICurrency__c.field-meta.xml
<CustomField>
    <fullName>TargetKPICurrency__c</fullName>
    <description>SDM: el objetivo  económico que se define en el plan para poder comparar con datos reales a futuro</description>
    <label>Target KPI €</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>