force-app/zurich-base/main/default/objects/PlanComercial__c/fields/TargetKPINumber__c.field-meta.xml
<CustomField>
    <fullName>TargetKPINumber__c</fullName>
    <description>SDM: el objetivo de cuantía que se define en el plan para poder comparar con datos reales a futuro</description>
    <label>Target KPI Nº</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>