force-app/zurich-base/main/default/objects/PlanComercial__c/fields/TargetKPIPercent__c.field-meta.xml
<CustomField>
    <fullName>TargetKPIPercent__c</fullName>
    <description>SDM: el objetivo de porcentaje que se define en el plan para poder comparar con datos reales a futuro</description>
    <label>Target KPI %</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>