force-app/zurich-base/main/default/objects/PlanComercial__c/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <label>Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Zonas_Plan_Comercial</valueSetName>
    </valueSet>
</CustomField>