force-app/zurich-base/main/default/objects/PlanComercial__c/recordTypes/ActionPlan.recordType-meta.xml
<RecordType>
    <fullName>ActionPlan</fullName>
    <active>true</active>
    <description>sdm: plan comercial simple que puede ser mensual o anual</description>
    <label>Action Plan</label>
</RecordType>