force-app/zurich-base/main/default/objects/PlanComercial__c/recordTypes/AnualPlan.recordType-meta.xml
<RecordType>
    <fullName>AnualPlan</fullName>
    <active>true</active>
    <description>sdm: plan comercial anual generado a partir del DT</description>
    <label>Anual Plan</label>
</RecordType>