force-app/zurich-base/main/default/objects/PlanComercial__c/recordTypes/MensualPlan.recordType-meta.xml
<RecordType>
    <fullName>MensualPlan</fullName>
    <active>true</active>
    <description>SDM: plan comercial autogenerado a partir de un plan anual</description>
    <label>Mensual Plan</label>
</RecordType>