force-app/zurich-base/main/default/objects/PlanComercial__c/validationRules/AssignedTo_RN.validationRule-meta.xml
<ValidationRule>
    <fullName>AssignedTo_RN</fullName>
    <active>true</active>
    <description>SDM: un RN sólo puede asignar un Plan Comercial a sí mismo</description>
    <errorConditionFormula>IF
(
  $Profile.Name = &quot;SDM RN&quot;,
  AssignedTo__r.Id  &lt;&gt;  $User.Id,
  false
  
)</errorConditionFormula>
    <errorDisplayField>AssignedTo__c</errorDisplayField>
    <errorMessage>Los RN sólo se pueden asignar Planes comerciales a sí mismo.</errorMessage>
</ValidationRule>