force-app/zurich-base/main/default/objects/PlanComercial__c/validationRules/End_date_mut_be_future.validationRule-meta.xml
<ValidationRule>
    <fullName>End_date_mut_be_future</fullName>
    <active>false</active>
    <description>SDM: la fecha debe estar a futuro</description>
    <errorConditionFormula>EndDate__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>EndDate__c</errorDisplayField>
    <errorMessage>La fecha de fin no puede estar a pasado</errorMessage>
</ValidationRule>