force-app/zurich-base/main/default/objects/PlanComercial__c/validationRules/KPI_Fields_blocked.validationRule-meta.xml
<ValidationRule>
    <fullName>KPI_Fields_blocked</fullName>
    <active>true</active>
    <description>Bloquea los campos que se usan para el cálculo del KPI.</description>
    <errorConditionFormula>(
  ISCHANGED( Intermediary__c ) 
 ||  
  ISCHANGED(  AccumulateType__c ) 
 ||  
  ISCHANGED(  Indicator__c ) 
 ||  
  ISCHANGED(  Product__c ) 
 ||  
  ISCHANGED(  Segment__c )
)
&amp;&amp; 
NOT(ISNULL( Actual_KPI__c ))</errorConditionFormula>
    <errorMessage>Una vez el KPI real ha sido informado no se pueden modificar los campos que se utilizan para su cálculo: Intermediario, indicador, producto, segmento y tipo de acumulado.</errorMessage>
</ValidationRule>