force-app/zurich-base/main/default/objects/PlanComercial__c/validationRules/Max_length_of_1_year.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_length_of_1_year</fullName>
    <active>true</active>
    <description>SDM: no debe haber más de una año entre la fecha inicio y fin,</description>
    <errorConditionFormula>ADDMONTHS(StartDate__c ,12) &lt; EndDate__c</errorConditionFormula>
    <errorDisplayField>EndDate__c</errorDisplayField>
    <errorMessage>Se ha excedido el límite de 1 año entre la fecha de inicio y fin.</errorMessage>
</ValidationRule>