force-app/zurich-base/main/default/objects/PlanComercial__c/validationRules/Start_date_blocked.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_date_blocked</fullName>
    <active>true</active>
    <description>Si la fecha inicio es a pasado, el KPI real ya habrá sido calculado, y por tanto no podrá pasarse a una fecha futura.</description>
    <errorConditionFormula>Actual_KPI__c &lt;&gt; null
&amp;&amp;
StartDate__c &gt;= TODAY()</errorConditionFormula>
    <errorDisplayField>StartDate__c</errorDisplayField>
    <errorMessage>La fecha inicio no puede ser futuro si el KPI real ya ha sido calculado.</errorMessage>
</ValidationRule>