force-app/zurich-base/main/default/objects/PlanComercial__c/validationRules/Start_date_smaller_than_End_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_date_smaller_than_End_date</fullName>
    <active>true</active>
    <description>SDM: la fecha de inicio debe ser inferior a la fecha de fin.</description>
    <errorConditionFormula>StartDate__c &gt;= EndDate__c</errorConditionFormula>
    <errorDisplayField>StartDate__c</errorDisplayField>
    <errorMessage>La fecha de inicio debe ser inferior a la fecha fin</errorMessage>
</ValidationRule>