force-app/zurich-base/main/default/objects/PlanComercial__c/validationRules/Target_KPI_blocked.validationRule-meta.xml
<ValidationRule>
    <fullName>Target_KPI_blocked</fullName>
    <active>true</active>
    <description>SDM: el KPI objetivo no puede ser modificado si el plan ha finalizado.</description>
    <errorConditionFormula>AND
(
OR
(
ISCHANGED( TargetKPINumber__c),
ISCHANGED( TargetKPICurrency__c),
ISCHANGED( TargetKPIPercent__c)
),
Status__c = &quot;Cerrado&quot;,
 RecordType.DeveloperName &lt;&gt; &apos;MensualPlan&apos;
)</errorConditionFormula>
    <errorDisplayField>TargetKPINumber__c</errorDisplayField>
    <errorMessage>El KPI objetivo no puede ser modificado si el plan ha finalizado.</errorMessage>
</ValidationRule>